We have standarized on "_" rather than "-" in command names.

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,6 +7,6 @@ RUN set -e -x && \
   apt-get install -y python3 openssl && \
   mkdir -p /data
 
-COPY kubernetes-make-user /usr/local/bin
+COPY kubernetes_make_user /usr/local/bin
 VOLUME /data
 WORKDIR /data
